    Example: bcdui.wkModels.guiStatus.read("//guiStatus:ClientSettings/guiStatus:Test[@caption='{{=it[0]}}' and @caption2='{{=it[1]}}']", ["china's republic", "drag\"n drop"]);

. Themes
* new pageEffect bcdEffectPageStickyFooter

. Security
* to come

. Server
* Updated 3rd party jars (apache commons etc) to latest versions

. Build / Dev / Docu
* In Eclipse, sub-projects Client, Server, Theme etc now have names BCD-UI--SubProjectName to keep them together in the navigation tree
* Switched to gradle 4.2, added gradle wrapper, updated nodeJs to 6.11
* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
* HTML JS API docu is now showing source names and lines

.Major bug fixes:
* to come

.Backward Incompatibilities:
* Component: cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
* Charts: Moved VML drawer to BCD-UI-DE
* Updated 3rd party jars (apache commons etc) to latest versions
* Cube: for templateManager, RankingEditor or Summary, you need to include bcduiComponent in addition to bcduiCube. Symptom: _renderSummaryArea is undefined
* Export: removed bcdui.component.exports.excel functions (detailExport, exportHTMLElement). Use bcdui.component.exports detailExport, exportWysiwygAsExcel functions.

==== Release 5_2_0

.Major new features:

. Components: Scorecard, Cube, Charts, Export
* Scorecard configurator added support for templates, ranking, sorting
* New reporting component added: a Free Analysis Report component (FAR)

. Widgets
* htmlHeaderBuilder now adds css classes bcdDimension/bcdMeasure
* New filter widget bcduiUniversalFilterNg allowing AND/OR expressions

. Core
* wrs-request wrq now supports HAVING clause
* New bcdui.wkModels.bcdCategories well-known model
* New Wrq2SqlServlet returning plain SQL generated from WRS-Request
* Extended features for taking over filters for detail export and drill

.Backward Incompatibilities: