@@ -109,6 +109,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!-- Allows setting subjectFilters -->
+  <filter>
+    <filter-name>bcdui4.SubjectSettingsFilter</filter-name>
+    <filter-class>de.businesscode.bcdui.web.filters.SubjectSettingsFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>bcdui4.SubjectSettingsFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <!-- Handle zipped guiStatus and request documents -->
   <filter>
     <filter-name>bcdui4.UnZipFilter</filter-name>
