@@ -47,6 +47,7 @@ import de.businesscode.bcdui.subjectsettings.SecurityHelper;
 import de.businesscode.bcdui.toolbox.Configuration;
 import de.businesscode.bcdui.toolbox.ServletUtils;
 import de.businesscode.bcdui.web.accessLogging.RequestHashGenerator;
+import de.businesscode.bcdui.web.filters.SubjectSettingsFilter;
 import de.businesscode.bcdui.web.taglib.webpage.Functions;
 import de.businesscode.util.StandardNamespaceContext;
 
@@ -133,6 +134,8 @@ public class BCDUIConfig extends HttpServlet {
     }
 
     writer.println("  , sessionHash: \"" + ( getSessionHash(request) ) + "\"");
+    // expose parameter names to the client so the client-API knows how to provide them
+    writer.println("  , security: { subjectSettingsFilter: { \"httpParamFilterName\":\"" + SubjectSettingsFilter.PARAM_NAME_FILTER_NAME + "\", \"httpParamFilterValue\":\"" + SubjectSettingsFilter.PARAM_NAME_FILTER_VALUE + "\" } } ");
     writer.println("  , debug: " + isDebug);
     writer.println("  , isDebug: " + isDebug);
     writer.println("  , libPath: \"" + getServletContext().getContextPath() + "/"+LIB_ROOT_FOLDER_NAME+"/\"");
