@@ -43,7 +43,9 @@ The Renderer either works directly with the specified element or (in case of spe
 * new pageEffect bcdEffectPageStickyFooter
 
 . Security
-* to come
+* client-controlled subject filters
+** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client
+** client-controlled subject filters can be set from client via bcdui.util.security API
 
 . Server
 * Updated 3rd party jars (apache commons etc) to latest versions
